refactor: replace swaggo type aliases with --parseDepency flag
