# docs/swagger/swagger.json
@@ -55,7 +55,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.bundlePageResponse"
+                            "$ref": "#/definitions/httputil.PageResponse-model_Bundle"
                         }
                     },
                     "400": {
@@ -817,7 +817,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.coursePageResponse"
+                            "$ref": "#/definitions/httputil.PageResponse-model_Course"
                         }
                     },
                     "400": {
@@ -982,7 +982,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.reviewPageResponse"
+                            "$ref": "#/definitions/httputil.PageResponse-model_Review"
                         }
                     },
                     "400": {
@@ -1531,7 +1531,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.enrollmentPageResponse"
+                            "$ref": "#/definitions/httputil.PageResponse-model_CourseEnrollment"
                         }
                     },
                     "400": {
@@ -3838,11 +3838,25 @@
             "type": "object",
             "required": [
                 "course_id",
+                "source",
                 "user_id"
             ],
             "properties": {
                 "course_id": {
                     "type": "string"
+                },
+                "source": {
+                    "enum": [
+                        "free",
+                        "purchase",
+                        "subscription",
+                        "manual"
+                    ],
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/model.EnrollmentSource"
+                        }
+                    ]
                 },
                 "user_id": {
                     "type": "string"
@@ -4750,17 +4764,75 @@
                 }
             }
         },
-        "handler.bundlePageResponse": {
-            "type": "object"
+        "httputil.PageMeta": {
+            "type": "object",
+            "properties": {
+                "limit": {
+                    "type": "integer"
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
         },
-        "handler.coursePageResponse": {
-            "type": "object"
+        "httputil.PageResponse-model_Bundle": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Bundle"
+                    }
+                },
+                "meta": {
+                    "$ref": "#/definitions/httputil.PageMeta"
+                }
+            }
         },
-        "handler.enrollmentPageResponse": {
-            "type": "object"
+        "httputil.PageResponse-model_Course": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Course"
+                    }
+                },
+                "meta": {
+                    "$ref": "#/definitions/httputil.PageMeta"
+                }
+            }
         },
-        "handler.reviewPageResponse": {
-            "type": "object"
+        "httputil.PageResponse-model_CourseEnrollment": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.CourseEnrollment"
+                    }
+                },
+                "meta": {
+                    "$ref": "#/definitions/httputil.PageMeta"
+                }
+            }
+        },
+        "httputil.PageResponse-model_Review": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Review"
+                    }
+                },
+                "meta": {
+                    "$ref": "#/definitions/httputil.PageMeta"
+                }
+            }
         },
         "model.Bundle": {
             "type": "object",
@@ -5041,6 +5113,9 @@
                 "progress_percent": {
                     "type": "number"
                 },
+                "source": {
+                    "$ref": "#/definitions/model.EnrollmentSource"
+                },
                 "status": {
                     "$ref": "#/definitions/model.EnrollmentStatus"
                 },
@@ -5062,6 +5137,21 @@
                 "CourseLevelIntermediate",
                 "CourseLevelAdvanced",
                 "CourseLevelExpert"
+            ]
+        },
+        "model.EnrollmentSource": {
+            "type": "string",
+            "enum": [
+                "free",
+                "purchase",
+                "subscription",
+                "manual"
+            ],
+            "x-enum-varnames": [
+                "EnrollmentSourceFree",
+                "EnrollmentSourcePurchase",
+                "EnrollmentSourceSubscription",
+                "EnrollmentSourceManual"
             ]
         },
         "model.EnrollmentStatus": {
